--- a/src/index.css
+++ b/src/index.css
@@ -93,6 +93,8 @@ a:link, a:visited {
   text-decoration: none;
 }
 
+
+/* ----- Main CSS ----- */
 .header {
   justify-content: space-between;
   align-items: center;
@@ -312,9 +314,12 @@ header .navigation li {
   filter: sepia(20%);
 }
 .styler h5 {
+  width: 30%;
+  margin: 1% 35%;
   font-size: 1.5rem;
   text-align: center;
-  padding: 2%;
+  border-bottom: 1px solid;
+  padding: 1%;
 }
 .styler p {
   line-height: 150%;
@@ -341,4 +346,139 @@ header .navigation li {
   border: 2px solid;
   text-align: center;
   box-shadow: 10px 10px;
+}
+
+@media (min-width: 701px) and (max-width: 999px){
+  h3 {
+    font-size: 1.8rem;
+  }
+  .header {
+    font-size: 1.1rem;
+  }
+  
+  .header h1 {
+    font-size: 1.5rem;
+  }
+
+  .welcomeBanner img {
+    height: 40vh;
+  }
+  
+  .infoBanner p {
+    font-size: 1.2rem;
+  }
+  
+  .navInfo {
+    font-size: 1.1rem;
+  }
+  
+  .contact p {
+    font-size: 1.2rem;
+  }
+  
+  .contactInfo {
+    font-size: .8rem;
+  }
+  
+  
+  .services ul {
+    padding: 1% 2%;
+    font-size: .8rem;
+  }
+  
+  .services ul li h4 {
+    font-size: 1rem;
+    padding: 0 0 1% 0;
+    margin: 0 0 1% 0;
+  }
+  
+  
+  .styler h5 {
+    font-size: 1.2rem;
+    padding: 3%
+  }
+  .styler p {
+    font-size: .8rem;
+  }
+  
+  .about {
+    border-bottom: 2px solid;
+    padding: 0 0 5% 0;
+  }
+  
+  .about p {
+    font-size: 1.2rem;
+  }
+}
+
+@media screen and (max-width: 700px){
+  h3 {
+    font-size: 1.1rem;
+  }
+  p{
+    font-size: .8rem;
+  }
+  .header {
+    font-size: .5rem;
+  }
+  
+  .header h1 {
+    font-size: 1rem;
+    letter-spacing: 5px;
+  }
+
+  .welcomeBanner h2 {
+    font-size: 2rem;
+  }
+  .welcomeBanner img {
+    height: 20vh;
+  }
+
+  
+  .navInfo {
+    font-size: .8rem;
+  }
+  
+  .styleGalleryA,
+  .styleGalleryB {
+    width: 100%;
+  }
+  .styleGalleryA img {
+    height: 20vh;
+  }
+  
+  .styleGalleryB img {
+    height: 10vh;
+  }
+  
+  
+  .contactInfo {
+    font-size: .4rem;
+  }
+  
+  .services {
+    margin: 0 10%;
+    width: 80%;
+  }
+  
+  .services ul {
+    font-size: .5rem;
+  }
+  
+  .services ul li h4 {
+    font-size: .5rem;
+  }
+  
+  .services ul li {
+    padding: 0 0 2% 0;
+  }
+  .styler img {
+    height: 30vh;
+  }
+  .styler h5 {
+    font-size: .6rem;
+  }
+  .styler p {
+    font-size: .5rem;
+  }
 }
