--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,480 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;700&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;700&display=swap');
+
+/* RESET CSS */
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+
+
+
+
+body{
+  background-color: #f5f5f5ff;
+  font-family: Raleway, 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  color: #5f5f5fff;
+  font-size: 62.5%;
+  margin: 5% 0;
+  text-transform: uppercase;
+}
+html {
+  scroll-behavior: smooth;
+}
+img {
+  width: 100%;
+}
+.flex {
+  display: flex;
+  flex-flow: row wrap;
+}
+.grid {
+  display: grid;
+}
+.hidden {
+  display: none;
+}
+
+h1, h2, h3 {
+  font-size: 2rem;
+}
+p {
+  font-size: 1.8rem;
+  text-transform: none;
+}
+a:link, a:visited {
+  color: inherit;
+  text-decoration: none;
+}
+
+.header {
+  justify-content: space-between;
+  align-items: center;
+  font-size: 1.2rem;
+  padding: 2%
+}
+
+.header h1 {
+  width: 50%;
+  font-size: 2rem;
+  letter-spacing: 10px;
+}
+
+header .navigation {
+  width: 50%;
+  justify-content: space-between;
+}
+
+header .navigation li {
+  padding: 1%;
+  border-bottom: solid 2px;
+  transition: 150ms;
+}
+
+.welcomeBanner {
+  grid-template-columns: 100%;
+  grid-template-rows: minmax(100px, auto);
+}
+.welcomeBanner h2 {
+  z-index: 1;
+  padding: 5%;
+  align-self: flex-end;
+  letter-spacing: 20px;
+  font-size: 3rem;
+  color: #f5f5f5ff;
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 1;
+  grid-row-end: 2;
+}
+.welcomeBanner img {
+  z-index: 0;
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 1;
+  grid-row-end: 2;
+  height: 80vh;
+  object-fit: cover;
+  object-position: 0px 45%;
+  filter: sepia(20%);
+}
+
+.infoBanner {
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2% 0;
+}
+
+.infoBanner p {
+  width: 30%;
+  padding: 2% 5%;
+  margin: 0 5%;
+  border: 2px solid;
+  text-align: center;
+  box-shadow: 10px 10px;
+}
+
+.navInfo {
+  width: 49%;
+  font-size: 1.5rem;
+  flex-flow: column;
+  align-items: center;
+  justify-content: space-between;
+}
+.navInfo li{
+  border: 2px solid;
+  width: 40%;
+  padding: 1%;
+  margin: 2.5% 0;
+  text-align: center;
+  transition: 150ms;
+}
+
+.navInfo li:hover,
+.navigation li:hover {
+  color: black;
+  transform:scale(1.2);
+}
+
+.styleGalleryA,
+.styleGalleryB {
+  width: 100%;
+}
+.styleGalleryA img {
+  width: 20%;
+  height: 40vh;
+  object-fit: cover;
+  filter: sepia(20%);
+}
+
+.styleGalleryA img:nth-of-type(1){
+  object-position: 50% 10%;;
+}
+
+.styleGalleryA img:nth-of-type(2){
+  object-position: 20% -30%;
+}
+
+.styleGalleryB img {
+  width: 33.33%;
+  height: 40vh;
+  object-fit: cover;
+  filter: sepia(20%);
+}
+.styleGalleryB img:nth-of-type(1){
+  object-position: 50% 50%;
+}
+.styleGalleryB img:nth-of-type(2){
+  object-position: 35% 50%;
+}
+.styleGalleryB img:nth-of-type(3){
+  object-position: 35% 5%;
+}
+
+
+
+
+.styles h3 {
+  text-align: center;
+  padding: 2% 0;
+  border-bottom: 2px solid;
+}
+
+.contact {
+  border-bottom: 2px solid;
+}
+
+.contact p {
+  width: 50%;
+  padding: 2% 5%;
+  margin: 5%;
+  border: 2px solid;
+  text-align: center;
+  box-shadow: 10px 10px;
+}
+
+.contactInfo {
+  justify-content: space-around;
+  flex-flow: column;
+  padding: 5% 0;
+  width: 25%;
+  font-size: 1rem;
+}
+
+.services {
+  grid-template-columns: 40% 60%;
+  grid-template-rows: minmax(100px, auto);
+  width: 70%;
+  margin: 0 15%;
+}
+
+.services h3 {
+ width: 100%;
+ text-align: center;
+ padding: 5% 0;
+ grid-column-start: 1;
+ grid-column-end: 3;
+ grid-row-start: 1;
+ grid-row-end: 2;
+}
+
+.services img {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 2;
+  grid-row-end: 5;
+  filter: sepia(20%);
+}
+
+.services ul {
+  background-color: #5f5f5f50;
+  padding: 2%;
+  font-size: 1rem;
+  grid-column-start: 2;
+  grid-column-end: 3;
+}
+
+.services ul li h4 {
+  font-size: 1.2rem;
+  border-bottom: 1px solid;
+  padding: 0 0 2% 0;
+  margin: 0 0 2% 0;
+}
+
+.services ul li {
+  padding: 0 0 2% 0;
+}
+.stylists {
+  padding: 5% 0;
+  border-top: 2px solid;
+  border-bottom: 2px solid;
+  margin: 5% 0;
+}
+.stylists h3 {
+  width: 100%;
+  text-align: center;
+  padding: 0 0 2% 0;
+}
+.styler {
+  width: 33.33%;
+}
+.styler img {
+  height: 50vh;
+  object-fit: cover;
+  object-position: 50% 50%;
+  filter: sepia(20%);
+}
+.styler h5 {
+  font-size: 1.5rem;
+  text-align: center;
+  padding: 2%;
+}
+.styler p {
+  line-height: 150%;
+  font-size: 1.2rem;
+  padding: 0 2%;
+  text-align: center;
+}
+
+.about {
+  border-bottom: 2px solid;
+  padding: 0 0 5% 0;
+}
+
+.about h3 {
+  width: 100%;
+  text-align: center;
+  padding: 0 0 2% 0;
+}
+
+.about p {
+  width: 80%;
+  padding: 2% 5%;
+  margin: 0 5%;
+  border: 2px solid;
+  text-align: center;
+  box-shadow: 10px 10px;
+}
+
+
+@media (min-width: 701px) and (max-width: 999px){
+  h3 {
+    font-size: 1.8rem;
+  }
+  .header {
+    font-size: 1.1rem;
+  }
+  
+  .header h1 {
+    font-size: 1.5rem;
+  }
+
+  .welcomeBanner img {
+    height: 40vh;
+  }
+  
+  .infoBanner p {
+    font-size: 1.2rem;
+  }
+  
+  .navInfo {
+    font-size: 1.1rem;
+  }
+  
+  .contact p {
+    font-size: 1.2rem;
+  }
+  
+  .contactInfo {
+    font-size: .8rem;
+  }
+  
+  
+  .services ul {
+    padding: 1% 2%;
+    font-size: .8rem;
+  }
+  
+  .services ul li h4 {
+    font-size: 1rem;
+    padding: 0 0 1% 0;
+    margin: 0 0 1% 0;
+  }
+  
+  
+  .styler h5 {
+    font-size: 1.2rem;
+    padding: 3%
+  }
+  .styler p {
+    font-size: .8rem;
+  }
+  
+  .about {
+    border-bottom: 2px solid;
+    padding: 0 0 5% 0;
+  }
+  
+  .about p {
+    font-size: 1.2rem;
+  }
+}
+
+@media screen and (max-width: 700px){
+  h3 {
+    font-size: 1.1rem;
+  }
+  p{
+    font-size: .8rem;
+  }
+  .header {
+    font-size: .5rem;
+  }
+  
+  .header h1 {
+    font-size: 1rem;
+    letter-spacing: 5px;
+  }
+
+  .welcomeBanner h2 {
+    font-size: 2rem;
+  }
+  .welcomeBanner img {
+    height: 20vh;
+  }
+
+  
+  .navInfo {
+    font-size: .8rem;
+  }
+  
+  .styleGalleryA,
+  .styleGalleryB {
+    width: 100%;
+  }
+  .styleGalleryA img {
+    height: 20vh;
+  }
+  
+  .styleGalleryB img {
+    height: 10vh;
+  }
+  
+  
+  .contactInfo {
+    font-size: .4rem;
+  }
+  
+  .services {
+    margin: 0 10%;
+    width: 80%;
+  }
+  
+  .services ul {
+    font-size: .5rem;
+  }
+  
+  .services ul li h4 {
+    font-size: .5rem;
+  }
+  
+  .services ul li {
+    padding: 0 0 2% 0;
+  }
+  .styler img {
+    height: 30vh;
+  }
+  .styler h5 {
+    font-size: .6rem;
+  }
+  .styler p {
+    font-size: .5rem;
+  }
 }
